--- a/index.html
+++ b/index.html
@@ -22,29 +22,41 @@
   <title>Frontend Mentor | Equalizer landing page</title>
 </head>
 <body>
-  <div class="container">
-    <header class="header"></header>
-    <div class="intro">
-      <h1 class="intro__header">We make your music sound extraordinary.</h1>
-      <p class="intro__para">
-        A system audio equalizer specifically designed for Android and iOS. Freely tune the
-        way your music sounds with a professional grade parametric EQ & volume mixer. Control
-        bass, mids, treble, gain control, reverb, and more!
-      </p>
+  <main class="main">
+    <picture class="main__background-img">
+      <source srcset="assets/bg-main-desktop.png" media="(min-width: 900px)" >
+      <source srcset="assets/bg-main-tablet.png" media="(min-width: 600px)">
+      <source srcset="assets/bg-main-mobile.png" media="(min-width: 280px)">
+      <img src="assets/bg-main-mobile.png" alt="">
+    </picture>
+    <img src="assets/logo.svg" alt="equilizer logo">
+    <div class="container">
+      <header class="header">
+      </header>
+      <img src="assets/bg-pattern-1.svg" alt="" class="main__top-pattern">
+      <div class="intro">
+        <h1 class="intro__header">We make your music sound extraordinary.</h1>
+        <p class="intro__para">
+          A system audio equalizer specifically designed for Android and iOS. Freely tune the
+          way your music sounds with a professional grade parametric EQ & volume mixer. Control
+          bass, mids, treble, gain control, reverb, and more!
+        </p>
+      </div>
+      <div class="action-card">
+        <h2 class="action-card__header">Premium EQ</h2>
+        Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
+        your listening experience to a whole new level and access all our incredible features!
+        $4 / month
+        <a class="action-card_android-btn" href="#">iOS Download</a>
+        <a class="action-card_android-btn" href="#">Android Download</a>
+      </div>
+      <footer class="footer">
+        <img src="assets/logo.svg" alt="equilizer logo">
+        All rights reserved © Equalizer 2021
+        Have any problems? Contact us via social media or email us at <a class="email" href="mailto:equalizer@example.com">equalizer@example.com</a>
+      </footer>
     </div>
-    <div class="action-card">
-      <h2 class="action-card__header">Premium EQ</h2>
-      Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
-      your listening experience to a whole new level and access all our incredible features!
-      $4 / month
-      <a class="action-card_android-btn" href="#">iOS Download</a>
-      <a class="action-card_android-btn" href="#">Android Download</a>
-    </div>
-    <footer class="footer">
-      All rights reserved © Equalizer 2021
-      Have any problems? Contact us via social media or email us at equalizer@example.com
-    </footer>
-  </div>
+  </main>
 
 </body>
 </html>
