--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
       <img src="assets/bg-main-mobile.png" alt="">
     </picture>
     <div class="content">
+<!-- Header section -->
       <header class="header container">
         <img src="assets/logo.svg" alt="equilizer logo">
       </header>
       <img src="assets/bg-pattern-1.svg" alt="" class="main__top-pattern">
+<!-- Intro section -->
       <div class="intro container">
         <h1 class="intro__header">We make your music sound extraordinary.</h1>
         <p class="p1 intro__para">
@@ -42,24 +44,35 @@
           bass, mids, treble, gain control, reverb, and more!
         </p>
       </div>
-      <div class="app-img">
-        <img src="assets/illustration-app.png" alt="illustration of app">
-        <img src="assets/bg-pattern-2.svg" alt="">
+<!-- App Illustrations section -->
+      <div class="app-illustration">
+        <img class="app-img" src="assets/illustration-app.png" alt="illustration of app">
+        <img class="app-illustration__bg-pattern" src="assets/bg-pattern-2.svg" alt="">
       </div>
+<!-- Call to action card -->
       <div class="action-card">
         <h2 class="action-card__header">Premium EQ</h2>
         <p class="p2 action-card__para">
           Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
           your listening experience to a whole new level and access all our incredible features!
-          $4 / month
         </p>
-        <a class="action-card_android-btn" href="#">iOS Download</a>
-        <a class="action-card_android-btn" href="#">Android Download</a>
+        <p class="action-card__price"><span>$4</span>/ month</p>
+        <div class="action-card__buttons">
+          <a class="action-card_ios-btn btn" href="#"> <img class="btn-icon" src="assets/icon-apple.svg" alt="apple icon"> iOS Download</a>
+          <a class="action-card_android-btn btn" href="#"> <img class="btn-icon" src="assets/icon-android.svg" alt="android icon"> Android Download</a>
+        </div>
       </div>
+<!-- Footer section -->
       <footer class="footer container">
-        <img src="assets/logo.svg" alt="equilizer logo">
-        All rights reserved © Equalizer 2021
-        Have any problems? Contact us via social media or email us at <a class="email" href="mailto:equalizer@example.com">equalizer@example.com</a>
+        <img class="footer-logo" src="assets/logo.svg" alt="equilizer logo">
+        <p class="reserve-rights p1">All rights reserved © Equalizer 2021</p>
+        <p class="contact p1">Have any problems? Contact us via social media or email us at</p> 
+        <a class="footer__email" href="mailto:equalizer@example.com">equalizer@example.com</a>
+        <div class="social-links">
+          <a href="facebook.com"><img src="assets/icon-facebook.svg" alt="facebook icon"></a>
+          <a href="instagram.com"><img src="assets/icon-instagram.svg" alt="instagram icon"></a>
+          <a href="twitter.com"><img src="assets/icon-twitter.svg" alt="twitter icon"></a>
+        </div>
       </footer>
     </div>
   </main>
