--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <p class="contact p1">Have any problems? Contact us via social media or email us at</p> 
         <a class="footer__email" href="mailto:equalizer@example.com">equalizer@example.com</a>
         <div class="social-links">
-          <a href="facebook.com"><img src="assets/icon-facebook.svg" alt="facebook icon"></a>
-          <a href="instagram.com"><img src="assets/icon-instagram.svg" alt="instagram icon"></a>
-          <a href="twitter.com"><img src="assets/icon-twitter.svg" alt="twitter icon"></a>
+          <a href="https://www.facebook.com"><img src="assets/icon-facebook.svg" alt="facebook icon"></a>
+          <a href="https://www.instagram.com"><img src="assets/icon-instagram.svg" alt="instagram icon"></a>
+          <a href="https://www.twitter.com"><img src="assets/icon-twitter.svg" alt="twitter icon"></a>
         </div>
       </footer>
     </div>
