--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link 
     rel="icon" 
     type="image/png" 
@@ -22,20 +21,15 @@
   <title>Frontend Mentor | Equalizer landing page</title>
 </head>
 <body>
-  <main class="main">
-    <picture class="main__background-img">
-      <source srcset="assets/bg-main-desktop.png" media="(min-width: 900px)" >
-      <source srcset="assets/bg-main-tablet.png" media="(min-width: 600px)">
-      <source srcset="assets/bg-main-mobile.png" media="(min-width: 280px)">
-      <img src="assets/bg-main-mobile.png" alt="">
-    </picture>
-    <div class="content">
 <!-- Header section -->
-      <header class="header container">
-        <img src="assets/logo.svg" alt="equilizer logo">
-      </header>
-      <img src="assets/bg-pattern-1.svg" alt="" class="main__top-pattern">
-<!-- Intro section -->
+  <header class="header container">
+    <img src="assets/logo.svg" alt="equilizer logo">
+  </header>
+<!-- Main Section -->
+  <main class="main">
+    <div class="main__background-img"></div>
+    <div class="content">
+  <!-- Intro section -->
       <div class="intro container">
         <h1 class="intro__header">We make your music sound extraordinary.</h1>
         <p class="p1 intro__para">
@@ -44,12 +38,12 @@
           bass, mids, treble, gain control, reverb, and more!
         </p>
       </div>
-<!-- App Illustrations section -->
+  <!-- App Illustrations section -->
       <div class="app-illustration">
         <img class="app-img" src="assets/illustration-app.png" alt="illustration of app">
         <img class="app-illustration__bg-pattern" src="assets/bg-pattern-2.svg" alt="">
       </div>
-<!-- Call to action card -->
+  <!-- Call to action card -->
       <div class="action-card">
         <h2 class="action-card__header">Premium EQ</h2>
         <p class="p2 action-card__para">
@@ -62,20 +56,22 @@
           <a class="action-card_android-btn btn" href="#"> <img class="btn-icon" src="assets/icon-android.svg" alt="android icon"> Android Download</a>
         </div>
       </div>
-<!-- Footer section -->
-      <footer class="footer container">
-        <img class="footer-logo" src="assets/logo.svg" alt="equilizer logo">
-        <p class="reserve-rights p1">All rights reserved © Equalizer 2021</p>
-        <p class="contact p1">Have any problems? Contact us via social media or email us at</p> 
-        <a class="footer__email" href="mailto:equalizer@example.com">equalizer@example.com</a>
-        <div class="social-links">
-          <a href="https://www.facebook.com"><img src="assets/icon-facebook.svg" alt="facebook icon"></a>
-          <a href="https://www.instagram.com"><img src="assets/icon-instagram.svg" alt="instagram icon"></a>
-          <a href="https://www.twitter.com"><img src="assets/icon-twitter.svg" alt="twitter icon"></a>
-        </div>
-      </footer>
     </div>
   </main>
-
+<!-- Footer section -->
+  <footer class="footer container">
+    <img class="footer-logo" src="assets/logo.svg" alt="equilizer logo">
+    <p class="reserve-rights p1">All rights reserved © Equalizer 2021</p>
+    <p class="contact p1">Have any problems? Contact us via social media or email us at</p> 
+    <a class="footer__email" href="mailto:equalizer@example.com">equalizer@example.com</a>
+    <div class="social-links">
+      <a href="facebook.com"><img src="assets/icon-facebook.svg" alt="facebook icon"></a>
+      <a href="instagram.com"><img src="assets/icon-instagram.svg" alt="instagram icon"></a>
+      <a href="twitter.com"><img src="assets/icon-twitter.svg" alt="twitter icon"></a>
+      <a href="https://www.facebook.com"><img src="assets/icon-facebook.svg" alt="facebook icon"></a>
+      <a href="https://www.instagram.com"><img src="assets/icon-instagram.svg" alt="instagram icon"></a>
+      <a href="https://www.twitter.com"><img src="assets/icon-twitter.svg" alt="twitter icon"></a>
+    </div>
+  </footer>
 </body>
 </html>
