--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="preconnect" 
     href="https://fonts.gstatic.com" crossorigin>
   <link 
-    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <link 
     rel="stylesheet" 
     href="style.css">
@@ -39,7 +39,7 @@
         </p>
       </div>
     
-      <div class="content container">
+      <!-- <div class="content container"> -->
         <div class="content__wrapper">
       <!-- App Illustrations section -->
           <figure class="app-illustration">
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-      </div>
+      <!-- </div> -->
     </section>
   </main>
 
