finalised price card buttons, started footer layout, all on mobile version

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!-- Main Section -->
   <main class="main">
     <div class="main__background-img"></div>
-    <section class="content">
+    <section class="hero-intro">
   <!-- Intro section -->
       <div class="intro container">
         <h1 class="intro__header">We make your music sound extraordinary.</h1>
@@ -39,7 +39,7 @@
         </p>
       </div>
     
-      <!-- <div class="content container"> -->
+      <div class="content container">
         <div class="content__wrapper">
       <!-- App Illustrations section -->
           <figure class="app-illustration">
@@ -54,12 +54,12 @@
             </p>
             <p class="action-card__price"><span>$4</span>/ month</p>
             <div class="action-card__buttons">
-              <a class="action-card_ios-btn btn" href="#"> <img class="btn-icon" src="assets/icon-apple.svg" alt="apple icon"> iOS Download</a>
-              <a class="action-card_android-btn btn" href="#"> <img class="btn-icon" src="assets/icon-android.svg" alt="android icon"> Android Download</a>
+              <a class="action-card_ios-btn btn" href="#"> <img class="btn-icon ios-icon" src="assets/icon-apple.svg" alt="apple icon"> iOS Download</a>
+              <a class="action-card_android-btn btn" href="#"> <img class="btn-icon android-icon" src="assets/icon-android.svg" alt="android icon"> Android Download</a>
             </div>
           </div>
         </div>
-      <!-- </div> -->
+      </div>
     </section>
   </main>
 
