completed footer (mobile) and full mobile version

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <a href="mailto:equalizer@example.com" class="email"><strong>equalizer@example.com</strong></a>
       </span>
       <ul class="social-links">
-        <li>
+        <li class="footer__li">
           <a href="https://facebook.com/" class="footer__social" target="_blank" aria-label="Facebook" rel="noopener">
              <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -84,7 +84,7 @@
              </svg>
           </a>
        </li>
-       <li>
+       <li class="footer__li">
           <a href="https://instagram.com/" class="footer__social" target="_blank" aria-label="Instagram" rel="noopener">
              <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -93,7 +93,7 @@
              </svg>
           </a>
        </li>
-       <li>
+       <li class="footer__li">
           <a href="https://twitter.com/" class="footer__social" target="_blank" aria-label="Twitter" rel="noopener">
              <svg width="20" height="17" xmlns="http://www.w3.org/2000/svg">
                 <path
