Finalised desktop version, begin interactive features

--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
 <!-- Footer section -->
   <footer class="footer">
     <div class="footer__container container">
-      <a href="#" class="footer__logo logo">
-        <img src="assets/logo.svg" alt="Equalizer logo">
-      </a>
-      <span>
-        All rights reserved © Equalizer 2021<br>
-        Have any problems? Contact us via social media or email us at
-        <a href="mailto:equalizer@example.com" class="email"><strong>equalizer@example.com</strong></a>
-      </span>
+      <div class="brand-rights">
+        <a href="#" class="footer__logo logo">
+          <img src="assets/logo.svg" alt="Equalizer logo">
+        </a>
+        <span>
+          All rights reserved © Equalizer 2021<br>
+          Have any problems? Contact us via social media or email us at
+          <a href="mailto:equalizer@example.com" class="email"><strong>equalizer@example.com</strong></a>
+        </span>
+      </div>
       <ul class="social-links">
         <li class="footer__li">
           <a href="https://facebook.com/" class="footer__social" target="_blank" aria-label="Facebook" rel="noopener">
